--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ pandas==2.0.3
 numpy==1.24.4
 ta==0.10.2
 python-dotenv==1.0.0
+numpy>=1.24.5  # Version compatible avec Python 3.12
+pandas>=2.1.4
+streamlit>=1.32.2
+requests>=2.31.0
+ta>=0.11.0
+setuptools>=67.8.0
+python-dotenv>=1.0.0
