--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.2
 requests==2.31.0
 pandas==2.0.3
-numpy==1.24.4
+numpy>=1.25.5
 ta>=0.11.0
 python-dotenv==1.0.0
 numpy>=1.24.5  # Version compatible avec Python 3.12
