--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ requests>=2.31.0
 ta>=0.11.0
 setuptools>=67.8.0
 python-dotenv>=1.0.0
+numpy>=1.26.0
+pandas>=2.1.4
+streamlit>=1.32.0
+ta>=0.11.0
+python-dotenv>=1.0.0
+setuptools>=68.0.0
