--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.26.4
-pandas==2.2.2
 streamlit==1.32.2
+requests==2.31.0
+pandas==2.1.4
+numpy==1.26.4
 ta==0.11.0
 python-dotenv==1.0.0
-setuptools==70.0.0
