--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 streamlit==1.32.2
-requests==2.31.0
-pandas==2.1.4
+requests[socks]==2.32.3
+pandas==2.2.2
 numpy==1.26.4
 ta==0.11.0
 python-dotenv==1.0.0
-requests[socks]==2.32.3  # Pour le support SOCKS
-streamlit==1.32.2
-pandas==2.2.2
-ta==0.11.0
-python-dotenv==1.0.0
+python-dateutil==2.9.0
