--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.32.2
-requests[socks]==2.32.3
-pandas==2.2.2
-numpy==1.26.4
-ta==0.11.0
-python-dotenv==1.0.0
-python-dateutil==2.9.0
+streamlit>=1.22.0
+requests>=2.28.0
+pandas>=1.5.0
+numpy>=1.23.0
+ta>=0.10.2
